[package]
name = "common"
version = "0.1.0"
authors = ["Daniel Graczer <daniel@fleek.co>"]
edition = "2018"

[dependencies]
crc32fast = "1.2.0"
ic-kit = "0.4.2"
ic-cdk = "0.3.1"
ic-types = "0.2.1"
hex = {version = "0.4.2", features = ["serde"] }
serde = { version="1.0.130", features = ["derive"] }
sha2 = "0.9.1"
